# lfcs-practice-tool

./: .env.example  .gitignore  =1.6.0  CHANGELOG.md  CONTRIBUTING.md  GITHUB_INFO.txt  LICENSE  MANIFEST.in  README.md  build.sh  build_package.sh  publish.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_banner.py
.hypothesis/constants/: 058352054e4185ab  1affba14cc973abd  22031b87aa7cfc51  28c80980444789f9  28ca5e300fbbe5fe  2f93b8b077facb0a  31fa523f61c67760  33587703d9a14a53  3574cac3e97c7db4  4d3b879215c2cd85  59b89118b1db69d0  5c00c2486a6a1d7a  606547b8dbf5658e  67b0a8ccf18bf5d2  69c76abe64d4925b  79d17a81f93cbbe0  7f7922514287181b  8616ad173d1d3de2  b13a4db976b160fb  b7366e14af9f59bf  c5778e37f86ec9e3  ceee14a79350b61a  d5e50bad042947cf  dcb0dbcf0e6e08eb  e74f5225ca35a19a  ead350d860e21daa  f3b34fb1a2ced6d3  f5e85ec6aa8afdc3
.hypothesis/examples/04e6b3400353b141/: 0d8fbc64690f900a  0ed2da19099576bb  1d1a3ad731be35c2  4c8517c528abf52b  7671f28ffd725e6c  97bdc8866b8892a2  a531ecf5c02641d2  a72886205c392ef8  a9f339062c1437b7  b5b26dcf52799165  b86f8a1142986b4b  c3e36252c9edb588  f9eeb2a659564a3c  fa05602526944c13  fa3e882e107f0b0a  fa4347cbc3c0ccb3  fb63faa59fb6895e
.hypothesis/examples/0d8fbc64690f900a/: 7b99849524ee53eb
.hypothesis/examples/1d1a3ad731be35c2/: 04e9e95ef5157ea6  1328f1e6805d6d30  1553eff58bae805c  29ca23a8cea6b5b4  2d356a076719207f  519a9006c4e3d266  (+15 more)
config/: ai_config.yaml  config.yaml
database/: schema.sql
docker/base_images/: build_all.sh
docker/learn/: build.sh
docker/validation_scripts/: .gitkeep  README.md  template.py  template.sh  validate_network_config.sh  validate_storage_config.py  validate_systemd_service.sh  validate_user_setup.py
docs/: TROUBLESHOOTING.md  error_handling.md
docs/architecture/: ARCHITECTURE.md
docs/developer_guide/: DEVELOPER_GUIDE.md
docs/user_guide/: USER_GUIDE.md
learn_modules/01_beginner/: 01_linux_basics.yaml
learn_modules/02_intermediate/: 02_pipes_redirection.yaml  03_process_management.yaml  04_package_management.yaml
learn_modules/03_advanced/: 01_networking_basics.yaml  02_storage_management.yaml  03_user_management.yaml
learn_modules/04_expert/: 01_security_hardening.yaml  02_automation_scripting.yaml  03_troubleshooting.yaml
scripts/: .gitkeep  verify_installation.sh  verify_structure.py
src/: __init__.py  __main__.py  main.py
src/agent/: lfcs-check
src/ai/: __init__.py  scenario_generator.py  validator.py
src/cli/: __init__.py  main_cli.py
src/core/: __init__.py  context_generator.py  engine.py  interfaces.py  models.py  scenario_loader.py
src/docker_manager/: README.md  __init__.py  container.py  environment.py  image_builder.py
src/learn/: __init__.py  interactive_shell.py  models.py  module_loader.py
src/utils/: __init__.py  banner.py  colors.py  config.py  db_manager.py  error_handler.py  init.py  system_check.py  version_check.py
src/validation/: __init__.py  validator.py
tests/: __init__.py  manual_docker_test.py
tests/scenarios/: __init__.py
tests/unit/: test_cli.py  test_config.py  test_db_manager.py  test_docker_manager.py  test_engine.py  test_error_handler.py  test_scenario_loader.py  test_validator.py
(+181 files in other folders)
